@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-13T01:12:07Z",
-  "count_outdated" : 5225,
-  "uniques_outdated" : 2854,
-  "count" : 5273,
-  "uniques" : 2893,
+  "timestamp" : "2025-08-14T01:12:36Z",
+  "count_outdated" : 5226,
+  "uniques_outdated" : 2855,
+  "count" : 5274,
+  "uniques" : 2894,
   "clones" : [
-    {
-      "timestamp": "2025-07-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-01T00:00:00Z",
       "count": 2,
@@ -121,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
