@@ -3,11 +3,6 @@
   "uniques": 23,
   "clones": [
     {
-      "timestamp": "2025-07-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-01T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -66,6 +61,11 @@
       "timestamp": "2025-08-12T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
